--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 
 <html lang="en">
-  <head></head>
+  <head>
+    <link href="styles.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+  </head>
   <body>
-    <p>Click to enter</p>
+    <h1 class="ml12">ANIMA</h1>
+    <a href="kitchen.html">Click to enter the game</a>
   </body>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script> -->
+  <script src="scripts.js"></script>
+
 
 </html>
