--- a/library.html
+++ b/library.html
@@ -1,5 +1,12 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
 
+<h1>Library</h1>
+<p>Here is the lib</p>
+
+</body>
 </html>
-<meta charset="utf-8">
