changed styles css to index only

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
   <head>
-    <link href="styles.css" rel="stylesheet">
+    <link href="indexstyles.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   </head>
   <body>
