--- a/kitchen.html
+++ b/kitchen.html
@@ -8,7 +8,7 @@
   <h1>Library</h1>
   <p>Here is the library.</p>
   <p>Entered the library: I find a sketchbook on the shelf ... Wow!! There is a handful of plant sketches ...</p>
-  <p style="background-color:Red;">Which page should I look at? Hint: I remember some # from labratory</p>
+  <p style="border:2px solid Violet;"> Which page should I look at? Hint: I remember some # from labratory</p>
 
   
   <p>It's getting darker and darker... The light goes off!!!</p>
