--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   </head>
   <body>
-    <h1 class="ml12">ANIMA</h1>
-    <a href="kitchen.html">Click to enter the game</a>
+
+    <h1 class="ml12 centertext"><a href="kitchen.html">ANIMA</a></h1>
+
+
   </body>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script> -->
   <script src="scripts.js"></script>
