--- a/library.html
+++ b/library.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <title>Page Title</title>
 </head>
-<body>
 
-<h1>Library</h1>
-<p>Here is the lib</p>
+<body>
+  <h1>Library</h1>
+  <p>Here is the library.</p>
+  <p>Entered the library: I find a sketchbook on the shelf ... Wow!! There is a handful of plant sketches ...</p>
+  <p style="color:darkviolet;"> Which page should I look at? Hint: I remember some # from labratory</p>
+
+  
+  <p>It's getting darker and darker... The light goes off!!!</p>
+  <p>Where is this plant heading to...?</p>
+
+
+  </p>
+
+  <img src="library.jpg" width="500" height="600">
 
 </body>
 </html>
+
