--- a/library.html
+++ b/library.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<title>Page Title</title>
+	<title>Page Title</title>
 </head>
 
 <body>
@@ -17,10 +16,14 @@
   <p>Where is this plant heading to...?</p>
 
 
-  </p>
-
   <img src="library.jpg" width="500" height="600">
-
+  
+  <p>
+	An plant cirrus image as a link: <a href="image.jpg">
+	<img src="plant_cirrus.jpg" width="100" height="100">
+	</a>
+  </p>
+    
 </body>
-</html>
 
+</html>
