--- a/library.html
+++ b/library.html
@@ -19,7 +19,7 @@
   <img src="library.jpg" width="500" height="600">
   
   <p>
-	An plant cirrus image as a link: <a href="image.jpg">
+	An plant cirrus image as a link: <a href="">
 	<img src="plant_cirrus.jpg" width="100" height="100">
 	</a>
   </p>
