Add echoAR plant into webpage

--- a/library.html
+++ b/library.html
@@ -14,6 +14,8 @@
   
   <p>It's getting darker and darker... The light goes off!!!</p>
   <p>Where is this plant heading to...?</p>
+  <iframe src="https://console.echoar.xyz/webar?key=delicate-block-6852&entry=e91cd52f-ee89-4cd2-8e52-0173a60fa893"
+  width="400" height="500"></iframe>
 
 
   <img src="library.jpg" width="500" height="600">
