edited index page

--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 
 <html lang="en">
   <head>
+    <title>ANIMA</title>
     <link href="indexstyles.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   </head>
   <body>
+    <div class="logo">
+      <a href="kitchen.html"><img src="logo.png" alt="Anima logo"></a>
+    </div>
 
-    <h1 class="ml12 centertext"><a href="kitchen.html">ANIMA</a></h1>
+    <!-- <h1 class="ml12 centertext"><a href="kitchen.html">ANIMA</a></h1> -->
 
 
   </body>
