changed titles of pages

--- a/library.html
+++ b/library.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Page Title</title>
+	<title>Library</title>
 </head>
 
 <body>
@@ -11,7 +11,7 @@
   <p>Entered the library: I find a sketchbook on the shelf ... Wow!! There is a handful of plant sketches ...</p>
   <p style="color:darkviolet;"> Which page should I look at? Hint: I remember some # from labratory</p>
 
-  
+
   <p>It's getting darker and darker... The light goes off!!!</p>
   <p>Where is this plant heading to...?</p>
   <iframe src="https://console.echoar.xyz/webar?key=delicate-block-6852&entry=e91cd52f-ee89-4cd2-8e52-0173a60fa893"
@@ -19,13 +19,13 @@
 
 
   <img src="library.jpg" width="500" height="600">
-  
+
   <p>
 	An plant cirrus image as a link: <a href="">
 	<img src="plant_cirrus.jpg" width="100" height="100">
 	</a>
   </p>
-    
+
 </body>
 
 </html>
