--- a/kitchen.html
+++ b/kitchen.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Kitchen</title>
 </head>
 
 <body>
@@ -10,7 +10,7 @@
   <p>Entered the library: I find a sketchbook on the shelf ... Wow!! There is a handful of plant sketches ...</p>
   <p style="color:darkviolet;"> Which page should I look at? Hint: I remember some # from labratory</p>
 
-  
+
   <p>It's getting darker and darker... The light goes off!!!</p>
   <p>Where is this plant heading to...?</p>
 
