--- a/library.html
+++ b/library.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Library</title>
+	<title>Page Title</title>
 </head>
 
 <body>
@@ -11,21 +11,42 @@
   <p>Entered the library: I find a sketchbook on the shelf ... Wow!! There is a handful of plant sketches ...</p>
   <p style="color:darkviolet;"> Which page should I look at? Hint: I remember some # from labratory</p>
 
+	<p>Please enter the page number that you want to brownse:
+	<button onclick="myFunction()">page#</button>
+	</p>
 
+	<p id="demo"></p>
+
+	<script>
+	function myFunction() {
+    		var num = 5;
+  		var page = prompt("enter a number","0");
+  		if(page=='5') {
+    			text = "correct";
+		}
+        	else{
+        		text = "Try again...";
+        	}
+            
+        	document.getElementById("demo").innerHTML = text;
+	}
+	</script>
+
+  
   <p>It's getting darker and darker... The light goes off!!!</p>
   <p>Where is this plant heading to...?</p>
   <iframe src="https://console.echoar.xyz/webar?key=delicate-block-6852&entry=e91cd52f-ee89-4cd2-8e52-0173a60fa893"
   width="400" height="500"></iframe>
 
-
   <img src="library.jpg" width="500" height="600">
 
+  
   <p>
 	An plant cirrus image as a link: <a href="">
 	<img src="plant_cirrus.jpg" width="100" height="100">
 	</a>
   </p>
-
+    
 </body>
 
 </html>
