add library image

--- a/library.html
+++ b/library.html
@@ -38,7 +38,7 @@
   <iframe src="https://console.echoar.xyz/webar?key=delicate-block-6852&entry=e91cd52f-ee89-4cd2-8e52-0173a60fa893"
   width="400" height="500"></iframe>
 
-  <img src="library.jpg" width="500" height="600">
+  <img src="library.png" width="500" height="600">
 
   
   <p>
