--- a/library.html
+++ b/library.html
@@ -76,7 +76,7 @@
 
   
   <p>
-	follow cirrus: <a href="">
+	follow cirrus: <a href="/volume6/chapter19/page19">
 	<img src="plant_cirrus.jpg" width="10" height="10">
 	</a>
   </p>
