--- a/laboratory.html
+++ b/laboratory.html
@@ -10,7 +10,7 @@
     <script src="laboratoryscript.js" async></script>
   </head>
   <body>
-    <p>Observatory</p>
+    <p>Laboratory</p>
     <a href="library.html">Go to Library</a>
     <div id="typedtext"></div>
 
