--- a/kitchen.html
+++ b/kitchen.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Kitchen</title>
-</head>
 
-<body>
-  <h1>Library</h1>
-  <p>Here is the library.</p>
-  <p>Entered the library: I find a sketchbook on the shelf ... Wow!! There is a handful of plant sketches ...</p>
-  <p style="color:darkviolet;"> Which page should I look at? Hint: I remember some # from labratory</p>
-
-
-  <p>It's getting darker and darker... The light goes off!!!</p>
-  <p>Where is this plant heading to...?</p>
-
-
-  </p>
-
-  <img src="library.jpg" width="500" height="600">
-
+<html lang="en">
+  <head>
+    <title>Kitchen</title>
+    <link rel="stylesheet" href="kitchenstyle.css">
+    <link href="https://fonts.googleapis.com/css?family=Waiting+for+the+Sunrise" rel="stylesheet" type="text/css"/>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js">
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"> -->
+    <script src="kitchenscript.js" async></script>
+  </head>
+  <body>
+    <p>Kitchen</p>
+    
+    <div id="typedtext"></div>
+    <img src="library.jpg" width="4000" height="2000">
+  </body>
 </body>
 </html>
