--- a/garden.html
+++ b/garden.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
+<body>
+  <h1>Library</h1>
+  <img src="garden.png" width="50" height="60">
+</body>
+
+</html>
