--- a/kitchen.html
+++ b/kitchen.html
@@ -10,10 +10,7 @@
     <script src="kitchenscript.js" async></script>
   </head>
   <body>
-    <p>Kitchen</p>
-    
-    <div id="typedtext"></div>
-    <img src="library.jpg" width="4000" height="2000">
+    <img src="library.jpg">
   </body>
 </body>
 </html>
