changed size of picture

--- a/kitchen.html
+++ b/kitchen.html
@@ -10,7 +10,7 @@
     <script src="kitchenscript.js" async></script>
   </head>
   <body>
-    <img src="library.jpg">
+    <img src="library.jpg" alt="kitchen" width="800" height="400">
   </body>
 </body>
 </html>
