--- a/kitchen.html
+++ b/kitchen.html
@@ -10,7 +10,10 @@
     <script src="kitchenscript.js" async></script>
   </head>
   <body>
-    <img src="library.jpg" width="800" height="400">
+    <p>Kitchen</p>
+
+    <div id="typedtext"></div>
+    <img src="library.jpg" width="4000" height="2000">
   </body>
 </body>
 </html>
