--- a/kitchen.html
+++ b/kitchen.html
@@ -13,7 +13,7 @@
     <p>Kitchen</p>
 
     <div id="typedtext"></div>
-    <img src="library.jpg" width="2000" height="1000">
+    <img src="kitchen.jpg" width="2000" height="1000">
   </body>
 </body>
 </html>
