working on Laboratory page

--- a/laboratory.html
+++ b/laboratory.html
@@ -10,9 +10,18 @@
     <script src="laboratoryscript.js" async></script>
   </head>
   <body>
-    <p>Laboratory</p>
-    <a href="library.html">Go to Library</a>
-    <div id="typedtext"></div>
-
+    <div class="outer-wrapper">
+      <div class="wrapper">
+        <div class="slide one">
+          <div id="typedtext"></div>
+        </div>
+        <div class="slide two">
+        </div>
+        <div class="slide three">
+          <div id="typedtext2"></div>
+        </div>
+        <div class="slide four"></div>
+      </div>
+    </div>
   </body>
 </html>
