--- a/kitchen.html
+++ b/kitchen.html
@@ -3,17 +3,29 @@
 <html lang="en">
   <head>
     <title>Kitchen</title>
-    <link rel="stylesheet" href="kitchenstyle.css">
+    <link rel="stylesheet" href="kitchenstyles.css">
     <link href="https://fonts.googleapis.com/css?family=Waiting+for+the+Sunrise" rel="stylesheet" type="text/css"/>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"> -->
     <script src="kitchenscript.js" async></script>
   </head>
   <body>
-    <p>Kitchen</p>
-
+    <div class="outer-wrapper">
+      <div class="wrapper">
+        <div class="slide one">
+          <div id="typedtext"></div>
+        </div>
+        <div class="slide two">
+        </div>
+        <div class="slide three">
+          <div id="typedtext2"></div>
+        </div>
+        <div class="slide four"></div>
+      </div>
+    </div>
+<!--
     <div id="typedtext"></div>
-    <img src="kitchen.jpg" width="2000" height="1000">
+    <img src="kitchen.jpg" width="2000" height="1000"> -->
   </body>
 </body>
 </html>
