--- a/garden.html
+++ b/garden.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Garden</title>
+	<script src="garden.js" async></script>
 </head>
 
 <body>
