--- a/library.html
+++ b/library.html
@@ -22,6 +22,8 @@
 				<p id="demo"></p>
 			</div>
 			<div class="slide three">
+				<iframe src="https://console.echoar.xyz/webar?key=old-snowflake-5180&entry=38bddb00-ac2a-4204-b2cc-5a7f85e4480d"
+			  width="300" height="400"></iframe>
 			</div>
 			<div class="slide four">
 				<p>Please enter the chapter number that you want to browse:
