add demo2 response

--- a/library.html
+++ b/library.html
@@ -26,8 +26,9 @@
 			</div>
 			<div class="slide four">
 				<p>Please enter the chapter number that you want to browse:
-		    <button onclick="chpFunction()">chp#</button>
-		    </p>
+		    		<button onclick="chpFunction()">chp#</button>
+		    		</p>
+				<p id="demo2"></p>
 			</div>
 			<div class="slide five">
 				<p>Please enter the page number that you want to browse:
