--- a/library.html
+++ b/library.html
@@ -15,8 +15,12 @@
 			</div>
 			<div class="slide two">
 				<p style="color:darkviolet;"> But where should you look? Hint: some # from the laboratory</p>
-				<iframe src="https://console.echoar.xyz/webar?key=old-snowflake-5180&entry=38bddb00-ac2a-4204-b2cc-5a7f85e4480d"
-			  width="300" height="400"></iframe>
+				<video width='500' height='150'
+       					onmouseenter='VideoController(true, this)'
+       					onmouseleave='VideoController(false, this)'
+       					src="book.mp4" loop>
+  				Your browser does not support the video tag.
+				</video>
 			</div>
 			<div class="slide three">
 				<p>Please enter the volume number that you want to browse:
