--- a/garden.html
+++ b/garden.html
@@ -9,6 +9,10 @@
 <body>
   <h1>Garden</h1>
   <img src="garden.png" width="50" height="60">
+   		 <div class="slide one">
+			<p> Why there are Easter Eggs?:
+			<button onclick="eggFunction()">crack</button>
+			</p>
 </body>
 
 </html>
