--- a/garden.html
+++ b/garden.html
@@ -9,10 +9,25 @@
 <body>
   <h1>Garden</h1>
   <img src="garden.png" width="50" height="60">
-   		 <div class="slide one">
-			<p> Why there are Easter Eggs?:
-			<button onclick="eggFunction()">crack</button>
-			</p>
-</body>
-
+  
+      <div class="slide one">
+				<p> Why there are Easter Eggs?:
+				<button onclick="easterEgg()">crack</button>
+                <button onclick="hint()">hint</button>
+				</p>
+                <p id="egginfo"></p>
+        
+        		<script>
+                	function crackeasterEgg(){
+                    	document.getElementById("egginfo").innerHTML = "My favorite disney princess is Mulan.";
+                    }
+                    function easterEgg(){
+                    	document.getElementById("egginfo").innerHTML = "This is a easter egg.";
+                    }
+                    function hint(){
+                    	document.getElementById("egginfo").innerHTML = "Needs a crack...";
+                    }
+                </script>
+        </div>
+ </body>
 </html>
