--- a/fountain.html
+++ b/fountain.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Fountain</title>
     <h1>Fountain</h1>
+    <img src="fountain.jpeg" alt="Fountain">
 </head>
 <body>
 
