--- a/laboratory.html
+++ b/laboratory.html
@@ -8,6 +8,28 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"> -->
     <script src="laboratoryscript.js" async></script>
+    <script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js' async></script>
+    <script type="text/javascript" src="js/jquery.mousewheel.min.js" async></script>
+    <script src="http://code.jquery.com/jquery-1.8.2.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('#submit').hide();
+            $('#tryagain').hide();
+            $('#amount').keyup(function() {
+                if ($(this).val() == '') {
+                    $('#submit').hide();
+                    $('#tryagain').hide();
+                }
+                else if ($(this).val() == '6/19'){
+                    $('#submit').show();
+                    $('#tryagain').hide();
+                }
+                else {
+                    $('#tryagain').show();
+                }
+            });
+        });
+    </script>
   </head>
   <body>
     <div class="outer-wrapper">
@@ -19,8 +41,21 @@
         </div>
         <div class="slide three">
           <div id="typedtext2"></div>
+          <div>
+            <p>Enter a special date to magnify enough to read the clue</p>
+            <p>Format: 0/00</p>
+          </div>
+          <div id="box1">
+            <form action="">
+                <input type="string" name="amount" id="amount" />
+                <p name="submit" id="submit">URL: /knowledge</p>
+                <p name="tryagain" id="tryagain">Hmmm... that's not it</p>
+            </form>
+          </div>
         </div>
-        <div class="slide four"></div>
+        <!-- <div class="slide four">
+
+        </div> -->
       </div>
     </div>
   </body>
