reflection story description

--- a/reflection.html
+++ b/reflection.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reflection</title>
+    <link rel="stylesheet" href="reflectionstyles.css">
+    <link href="https://fonts.googleapis.com/css?family=Waiting+for+the+Sunrise" rel="stylesheet" type="text/css"/>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js">
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"> -->
+    <script src="reflectionscript.js" async></script>
+  </head>
+<head>
+    <meta charset="UTF-8">
+    <div class="wrapper">
+			<div class="slide one">
+				<div id="typedtext"></div>
+			</div>
+            <img src="reflection.jpg"  alt="Reflection">
+    </div>
 </head>
-
 <body>
 
-  <p>Once the water flowed into the fountain, you looked into the fountain and saw your reflection. Now you understand.</p>
-  
-  <h1>Reflection</h1>
-  <img src="reflection.jpg" >
 </body>
-
 </html>
 
-    © 2021 GitHub, Inc.
-    Terms
+
