--- a/library.html
+++ b/library.html
@@ -25,7 +25,21 @@
 			</div>
 			<div class="slide three">
 				<p>Please enter the volume number that you want to browse:
-				<button onclick="volFunction()">volume#</button>
+				<style>
+				    .button {
+				      background-color: gray;
+				      border: none;
+				      color: white;
+				      padding: 5px 12px;
+				      text-align: center;
+				      text-decoration: none;
+				      display: inline-block;
+				      font-size: 14px;
+				      margin: 2px 2px;
+				      cursor: pointer;
+				    }
+				  </style>
+				  <a href="#" class="button" onclick="volFunction()">chp#</a>
 				</p>
 				<p id="demo"></p>
 			<script>
@@ -45,7 +59,22 @@
 			</div>
 			<div class="slide four">
 				<p>Please enter the chapter number that you want to browse:
-		    		<button onclick="chpFunction()">chp#</button>
+		    		<style>
+				    .button {
+				      background-color: gray;
+				      border: none;
+				      color: white;
+				      padding: 5px 12px;
+				      text-align: center;
+				      text-decoration: none;
+				      display: inline-block;
+				      font-size: 14px;
+				      margin: 2px 2px;
+				      cursor: pointer;
+				    }
+				  </style>
+				  <a href="#" class="button" onclick="chpFunction()">chp#</a>
+				
 		    		</p>
 				<p id="demo2"></p>
 			<script>
@@ -65,7 +94,21 @@
 			</div>
 			<div class="slide five">
 				<p>Please enter the page number that you want to browse:
-		    	<button onclick="pgFunction()">page#</button>
+				<style>
+				    .button {
+				      background-color: gray;
+				      border: none;
+				      color: white;
+				      padding: 5px 12px;
+				      text-align: center;
+				      text-decoration: none;
+				      display: inline-block;
+				      font-size: 14px;
+				      margin: 2px 2px;
+				      cursor: pointer;
+				    }
+				  </style>
+				  <a href="#" class="button" onclick="pgFunction()">chp#</a>
 				</p>
 		   	 <p id="demo3"></p>
 			<script>
