--- a/fountain.html
+++ b/fountain.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <title>Fountain</title>
-    <link rel="stylesheet" href="fountainstyles.css">
+    <link rel="stylesheet" href="styles/fountainstyles.css">
     <link href="https://fonts.googleapis.com/css?family=Waiting+for+the+Sunrise" rel="stylesheet" type="text/css"/>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"> -->
-    <script src="fountainscript.js" async></script>
+    <script src="scripts/fountainscript.js" async></script>
   </head>
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
 			<div class="slide one">
 				<div id="typedtext"></div>
 			</div>
-            <img src="fountain.jpeg" alt="Fountain">
+            <img src="assets/fountain.jpeg" alt="Fountain">
     </div>
 </head>
 <body>
