--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html lang="en">
   <head>
     <title>ANIMA</title>
-    <link href="indexstyles.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <link href="styles/indexstyles.css" rel="stylesheet">
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script> -->
   </head>
   <body>
     <div class="logo">
-      <a href="kitchen.html"><img src="logo.png" alt="Anima logo"></a>
+      <a href="kitchen.html"><img src="assets/logo.png" alt="Anima logo"></a>
     </div>
 
     <!-- <h1 class="ml12 centertext"><a href="kitchen.html">ANIMA</a></h1> -->
@@ -16,7 +16,7 @@
 
   </body>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script> -->
-  <script src="scripts.js"></script>
+  <!-- <script src="scripts.js"></script> -->
 
 
 </html>
