--- a/kitchen.html
+++ b/kitchen.html
@@ -3,11 +3,11 @@
 <html lang="en">
   <head>
     <title>Kitchen</title>
-    <link rel="stylesheet" href="kitchenstyles.css">
+    <link rel="stylesheet" href="styles/kitchenstyles.css">
     <link href="https://fonts.googleapis.com/css?family=Waiting+for+the+Sunrise" rel="stylesheet" type="text/css"/>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"> -->
-    <script src="kitchenscript.js" async></script>
+    <script src="scripts/kitchenscript.js" async></script>
   </head>
   <body>
     <div class="outer-wrapper">
