--- a/laboratory.html
+++ b/laboratory.html
@@ -3,15 +3,15 @@
 <html lang="en">
   <head>
     <title>Laboratory</title>
-    <link rel="stylesheet" href="laboratorystyles.css">
+    <link rel="stylesheet" href="styles/laboratorystyles.css">
     <link href="https://fonts.googleapis.com/css?family=Waiting+for+the+Sunrise" rel="stylesheet" type="text/css"/>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"> -->
-    <script src="laboratoryscript.js" async></script>
-    <script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js' async></script>
-    <script type="text/javascript" src="js/jquery.mousewheel.min.js" async></script>
-    <script src="http://code.jquery.com/jquery-1.8.2.js"></script>
-    <script type="text/javascript">
+    <script src="scripts/laboratoryscript.js" async></script>
+    <!-- <script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js' async></script>
+    <script type="text/javascript" src="js/jquery.mousewheel.min.js" async></script>-->
+    <!-- <script src="http://code.jquery.com/jquery-1.8.2.js"></script> -->
+    <!-- <script type="text/javascript">
         $(document).ready(function() {
             $('#submit').hide();
             $('#tryagain').hide();
@@ -29,7 +29,7 @@
                 }
             });
         });
-    </script>
+    </script> -->
   </head>
   <body>
     <div class="outer-wrapper">
@@ -58,5 +58,25 @@
         </div> -->
       </div>
     </div>
+    <script src="http://code.jquery.com/jquery-1.8.2.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('#submit').hide();
+            $('#tryagain').hide();
+            $('#amount').keyup(function() {
+                if ($(this).val() == '') {
+                    $('#submit').hide();
+                    $('#tryagain').hide();
+                }
+                else if ($(this).val() == '6/19'){
+                    $('#submit').show();
+                    $('#tryagain').hide();
+                }
+                else {
+                    $('#tryagain').show();
+                }
+            });
+        });
+    </script>
   </body>
 </html>
