--- a/reflection.html
+++ b/reflection.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <title>Reflection</title>
-    <link rel="stylesheet" href="reflectionstyles.css">
+    <link rel="stylesheet" href="styles/reflectionstyles.css">
     <link href="https://fonts.googleapis.com/css?family=Waiting+for+the+Sunrise" rel="stylesheet" type="text/css"/>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"> -->
-    <script src="reflectionscript.js" async></script>
+    <script src="scripts/reflectionscript.js" async></script>
   </head>
 <head>
     <meta charset="UTF-8">
@@ -14,12 +14,10 @@
 			<div class="slide one">
 				<div id="typedtext"></div>
 			</div>
-            <img src="reflection.jpg"  alt="Reflection">
+            <img src="assets/reflection.jpg"  alt="Reflection">
     </div>
 </head>
 <body>
 
 </body>
 </html>
-
-
