--- a/garden.html
+++ b/garden.html
@@ -20,7 +20,7 @@
 			</div>
 	    <div class="slide three">
 				<p> Why there are Easter Eggs?:
-					<button onclick="easterEgg()">crack</button>
+					<button onclick="crackeasterEgg()">crack</button>
 			    <button onclick="hint()">hint</button>
 				</p>
 		    <p id="egginfo"></p>
