--- a/library.html
+++ b/library.html
@@ -15,7 +15,7 @@
 				<div id="typedtext"></div>
 			</div>
 			<div class="slide two">
-				<p style="color:darkviolet;"> But where should you look? Hint: some # from the laboratory</p>
+				<p style="color:darkviolet;"> But where should you look? Hint: some # from the kitchen</p>
 				<video width='500' height='150'
        					onmouseenter='VideoController(true, this)'
        					onmouseleave='VideoController(false, this)'
