--- a/kitchen.html
+++ b/kitchen.html
@@ -26,6 +26,8 @@
 <!--
     <div id="typedtext"></div>
     <img src="kitchen.jpg" width="2000" height="1000"> -->
+    	<a href="assets/Purple Planet Music - Faded Grandeur (3 38) 110bpm.mp3">Faded Grandeur - Music from Purple Planet Music</a> 
+
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="/__/firebase/8.2.10/firebase-app.js"></script>
 
