--- a/moscato.html
+++ b/moscato.html
@@ -3,11 +3,11 @@
 <html lang="en">
   <head>
     <title>Laboratory</title>
-    <link rel="stylesheet" href="styles/laboratorystyles.css">
+    <link rel="stylesheet" href="styles/moscatostyles.css">
     <link href="https://fonts.googleapis.com/css?family=Waiting+for+the+Sunrise" rel="stylesheet" type="text/css"/>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"> -->
-    <script src="scripts/laboratoryscript.js" async></script>
+    <script src="scripts/moscatoscript.js" async></script>
     <!-- <script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js' async></script>
     <script type="text/javascript" src="js/jquery.mousewheel.min.js" async></script>-->
     <!-- <script src="http://code.jquery.com/jquery-1.8.2.js"></script> -->
