Update and rename library.html to knowledge.html

--- a/knowledge.html
+++ b/knowledge.html
@@ -4,8 +4,8 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Library</title>
-	<link rel="stylesheet" href="styles/librarystyles.css">
-	<script src="scripts/libraryscript.js" async></script>
+	<link rel="stylesheet" href="styles/knowledgestyles.css">
+	<script src="scripts/knowledgescript.js" async></script>
 </head>
 
 <body>
