--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="logo">
-      <a href="kitchen.html"><img src="assets/logo.png" alt="Anima logo"></a>
+      <a href="intro.html"><img src="assets/logo.png" alt="Anima logo"></a>
     </div>
 
     <!-- <h1 class="ml12 centertext"><a href="kitchen.html">ANIMA</a></h1> -->
