--- a/intro.html
+++ b/intro.html
@@ -14,6 +14,14 @@
       <div class="wrapper">
         <div class="slide one">
           <div id="typedtext"></div>
+            <figure>
+              <figcaption>Faded Grandeur - Music from Purple Planet Music</figcaption>
+              <audio 
+                     controls
+                     src="assets/Purple Planet Music - Faded Grandeur (3 38) 110bpm.mp3">
+                Your browser does not support the <code>audio</code>element.
+              </audio>
+            </figure>
         </div>
         <div class="slide two">
         </div>
@@ -26,7 +34,7 @@
 <!--
     <div id="typedtext"></div>
     <img src="kitchen.jpg" width="2000" height="1000"> -->
-    <a href="assets/Purple Planet Music - Faded Grandeur (3 38) 110bpm.mp3">Faded Grandeur - Music from Purple Planet Music</a> 
+    
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="/__/firebase/8.2.10/firebase-app.js"></script>
