--- a/intro.html
+++ b/intro.html
@@ -26,7 +26,7 @@
     </div>
 <!--
     <div id="typedtext"></div>
-    <img src="kitchen.jpg" width="2000" height="1000"> -->
+    <img src="assets/kitchen.jpg" width="2000" height="1000"> -->
     <figure>
               <figcaption>Faded Grandeur - Music from Purple Planet Music</figcaption>
               <audio 
