--- a/knowledge.html
+++ b/knowledge.html
@@ -57,7 +57,16 @@
 		
 		</div>
 	</div>
-	<a href="assets/bensound-relaxing.mp3">Relaxing - Music from Bensound.com</a> 
+	<img src="assets/kitchen.jpg" width="2000" height="1000"> -->
+    <figure>
+              <figcaption>Relaxing - Music from Bensound.com</figcaption>
+              <audio 
+                     controls autoplay
+                     src="assets/bensound-relaxing.mp3">
+                Your browser does not support the <code>audio</code>element.
+              </audio>
+            </figure>
+	
 	<!-- The core Firebase JS SDK is always required and must be listed first -->
 	<script src="/__/firebase/8.2.10/firebase-app.js"></script>
 
