--- a/reflection.html
+++ b/reflection.html
@@ -18,7 +18,17 @@
     </div>
 </head>
 <body>
-	<a href="assets/Nocturne in E flat major, Op. 9 no. 2.mp3">Nocturne in E flat major, Op. 9 no. 2 - Frank Levy</a> 
+	
+	
+    <figure>
+              <figcaption>Nocturne in E flat major, Op. 9 no. 2 - Frank Levy</figcaption>
+              <audio 
+                     controls autoplay
+                     src="assets/Nocturne in E flat major, Op. 9 no. 2.mp3">
+                Your browser does not support the <code>audio</code>element.
+              </audio>
+            </figure>
+	
 	<!-- The core Firebase JS SDK is always required and must be listed first -->
 	<script src="/__/firebase/8.2.10/firebase-app.js"></script>
 
