--- a/garden.html
+++ b/garden.html
@@ -27,7 +27,15 @@
 	    </div>
 		</div>
 	</div>
-	<a href="assets/Purple Planet Music - Rolling Hills (1 33) 120bpm.mp3">Rolling Hills - Music from Purple Planet Music</a> 
+	 <figure>
+              <figcaption>Rolling Hills - Music from Purple Planet Music</figcaption>
+              <audio 
+                     controls autoplay
+                     src="assets/Purple Planet Music - Rolling Hills (1 33) 120bpm.mp3">
+                Your browser does not support the <code>audio</code>element.
+              </audio>
+            </figure>
+	
 	<!-- The core Firebase JS SDK is always required and must be listed first -->
 	<script src="/__/firebase/8.2.10/firebase-app.js"></script>
 
