easter eggs image

--- a/garden.html
+++ b/garden.html
@@ -23,6 +23,7 @@
 					<button onclick="crackeasterEgg()">crack</button>
 			    <button onclick="hint()">hint</button>
 				</p>
+		    <img src = 'easter-eggs-1527832.jpg' width="500" height="450">
 		    <p id="egginfo"></p>
 	    </div>
 		</div>
