--- a/garden.html
+++ b/garden.html
@@ -27,6 +27,10 @@
 		    <p id="egginfo"></p>
 	    </div>
 		</div>
+		<div class="slide four">
+				<iframe src="https://console.echoar.xyz/webar?key=delicate-block-6852&entry=b7ac5464-ffe3-4676-a229-a4b09d6d46ce"
+			  width="600" height="500"></iframe>
+		</div>
 	</div>
 	 <figure>
               <figcaption>Rolling Hills - Music from Purple Planet Music</figcaption>
