--- a/moscato.html
+++ b/moscato.html
@@ -78,7 +78,14 @@
             });
         });
     </script>
-    
+    <figure>
+              <figcaption>November - Music from bensound.com</figcaption>
+              <audio 
+                     controls autoplay
+                     src="assets/bensound-november.mp3">
+                Your browser does not support the <code>audio</code>element.
+              </audio>
+            </figure>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="/__/firebase/8.2.10/firebase-app.js"></script>
 
