--- a/fountain.html
+++ b/fountain.html
@@ -19,6 +19,15 @@
     </div>
 </head>
 <body>
+	
+	<figure>
+              <figcaption>Waterside Harmony - Music from Purple Planet Music</figcaption>
+              <audio 
+                     controls autoplay
+                     src="Purple Planet Music - Waterside Harmony (1 50) 100bpm.mp3">
+                Your browser does not support the <code>audio</code>element.
+              </audio>
+            </figure>
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="/__/firebase/8.2.10/firebase-app.js"></script>
 
