--- a/magnolia.html
+++ b/magnolia.html
@@ -3,8 +3,8 @@
 <head>
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 	<title>Garden</title>
-	<script src="scripts/garden.js" async></script>
-	<link rel="stylesheet" href="styles/gardenstyles.css">
+	<script src="scripts/magnolia.js" async></script>
+	<link rel="stylesheet" href="styles/magnoliastyles.css">
 </head>
 
 <body>
