--- a/intro.html
+++ b/intro.html
@@ -28,10 +28,10 @@
     <div id="typedtext"></div>
     <img src="assets/kitchen.jpg" width="2000" height="1000"> -->
     <figure>
-              <figcaption>Faded Grandeur - Music from Purple Planet Music</figcaption>
+              <figcaption>Reflection - Yakov Golman</figcaption>
               <audio 
                      controls autoplay
-                     src="assets/Purple Planet Music - Faded Grandeur (3 38) 110bpm.mp3">
+                     src="assets/Yakov Golman - Reflection.mp3">
                 Your browser does not support the <code>audio</code>element.
               </audio>
             </figure>
