reflection story update

--- a/reflection.html
+++ b/reflection.html
@@ -14,7 +14,12 @@
 			<div class="slide one">
 				<div id="typedtext"></div>
 			</div>
-            <img src="assets/reflection.jpg"  alt="Reflection">
+            <div class="slide two">
+          <img src="assets/reflection.jpg"  alt="Reflection" width="900" height="800">
+        </div>
+        <div class="slide three">
+            <div id="typedtext2"></div>
+        </div>
     </div>
 </head>
 <body>
