--- a/knowledge.html
+++ b/knowledge.html
@@ -45,8 +45,7 @@
 
 			</div>
 			<div class="slide six">
-				<p>It's getting darker and darker... The light goes off!!!</p>
-			  <p>Where is this plant heading to...?</p>
+				<p>It's getting darker and darker... What type of plant is this?</p>
 			  <iframe src="https://console.echoar.xyz/webar?key=delicate-block-6852&entry=e91cd52f-ee89-4cd2-8e52-0173a60fa893"
 			  width="350" height="450"></iframe>
 
@@ -57,7 +56,7 @@
 		
 		</div>
 	</div>
-	<img src="assets/kitchen.jpg" width="2000" height="1000"> -->
+	
     <figure>
               <figcaption>Relaxing - Music from Bensound.com</figcaption>
               <audio 
