--- a/magnolia.html
+++ b/magnolia.html
@@ -20,14 +20,7 @@
 				<iframe src="https://console.echoar.xyz/webar?key=delicate-block-6852&entry=b7ac5464-ffe3-4676-a229-a4b09d6d46ce"
 			  width="600" height="500"></iframe>
 			</div>
-	    <div class="slide three">
-				<p> Why there are Easter Eggs?:
-					<button onclick="crackeasterEgg()">crack</button>
-			    <button onclick="hint()">hint</button>
-				</p>
-		    <img src = 'easter-eggs-1527832.jpg' width="500" height="450">
-		    <p id="egginfo"></p>
-	    </div>
+	    <!--Easter Egg: Mulan is my favorite Disney movie. What does Mulan mean?-->
 		
 		</div>
 	</div>
