--- a/moscato.html
+++ b/moscato.html
@@ -42,7 +42,7 @@
         <div class="slide three">
           <div id="typedtext2"></div>
           <div>
-            <p>Enter a special date to magnify enough to read the clue</p>
+            <p>You see a note next to the microscope: The answer is a date! Wonder what date is being mentioned?</p>
             <p>Format: 0/00</p>
           </div>
           <div id="box1">
