--- a/moscato.html
+++ b/moscato.html
@@ -48,8 +48,8 @@
           <div id="box1">
             <form action="">
                 <input type="string" name="amount" id="amount" />
-                <p name="submit" id="submit">URL: /knowledge</p>
-                <p name="tryagain" id="tryagain">Hmmm... that's not it</p>
+                <p name="submit" id="submit" style="display:none;">URL: /knowledge</p>
+                <p name="tryagain" id="tryagain" style="display:none;">Hmmm... that's not it</p>
             </form>
           </div>
         </div>
