--- a/memory.html
+++ b/memory.html
@@ -23,7 +23,7 @@
               <figcaption>Waterside Harmony - Music from Purple Planet Music</figcaption>
               <audio 
                      controls autoplay
-                     src="Purple Planet Music - Waterside Harmony (1 50) 100bpm.mp3">
+                     src="Purple Planet Music - Waterside Harmony.mp3">
                 Your browser does not support the <code>audio</code>element.
               </audio>
             </figure>
