--- a/memory.html
+++ b/memory.html
@@ -14,7 +14,13 @@
 			<div class="slide one">
 				<div id="typedtext"></div>
 			</div>
-            <img src="assets/fountain.jpeg" alt="Fountain">
+            <div class="slide two">
+				<img src="assets/fountain.jpeg" alt="Fountain">
+			</div>
+            <div class="slide three">
+				<div id="typedtext2"></div>
+			</div>
+
     </div>
 </head>
 <body>
@@ -23,7 +29,7 @@
               <figcaption>Waterside Harmony - Music from Purple Planet Music</figcaption>
               <audio 
                      controls autoplay
-                     src="Purple Planet Music - Waterside Harmony.mp3">
+                     src="Purple Planet Music - Waterside Harmony (1 50) 100bpm.mp3">
                 Your browser does not support the <code>audio</code>element.
               </audio>
             </figure>
