--- a/moscato.html
+++ b/moscato.html
@@ -49,11 +49,10 @@
             <p>Format: 0/00</p>
           </div>
           <div id="box1">
-            <form action="">
+            <p>
                 <input type="string" name="amount" id="amount" />
-                <button type="submit" name="submit" onclick="dateFunction()">Important Date: </button>
-              </p>
-                <p name="tryagain" id="tryagain">Hmmm... that's not it</p>
+                <button type="submit" name="submit" onclick="dateFunction()">Submit date </button>
+              <p id="submitDate"></p>
             </form>
           </div>
         </div>
