--- a/moscato.html
+++ b/moscato.html
@@ -46,7 +46,7 @@
           <div id="typedtext2"></div>
           <div>
             <p>You see a note next to the microscope: The answer is a date! Wonder what date is being mentioned?</p>
-            <p>Format: 0/00</p>
+            <p>Format: 000</p>
           </div>
           <div id="box1">
             <p>
